objects/Opportunity.object
<CustomObject>
    <businessProcesses>
        <fullName>Opportunity</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Bank Approval%2FDenial</fullName>
        </values>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Collecting Documents</fullName>
        </values>
        <values>
            <fullName>Delivery</fullName>
        </values>
        <values>
            <fullName>Proposal</fullName>
        </values>
        <values>
            <fullName>Quote-Analysis</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Actual_Close_Date__c</fullName>
        <label>Actual Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Balance_Points__c</fullName>
        <label>Balance Point</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Balance__c</fullName>
        <label>Balance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Bank_Submission__c</fullName>
        <label>Bank Submission</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Denied</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Budget_Confirmed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Budget Confirmed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Capture_Person_Account__c</fullName>
        <formula>Account.PersonContact.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Capture Person Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Collect_document_for_Bank_Approval__c</fullName>
        <label>Collect document for Bank Approval</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Generated Credit Application</fullName>
                </value>
                <value>
                    <fullName>Insurance Card if Any</fullName>
                </value>
                <value>
                    <fullName>DL Front and Back</fullName>
                </value>
                <value>
                    <fullName>College transcript if any</fullName>
                </value>
                <value>
                    <fullName>Military related Docs</fullName>
                </value>
                <value>
                    <fullName>2 Most recent paystubs if any</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Collecting_related_docs__c</fullName>
        <label>Collecting related docs</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Copy of the contract</fullName>
                </value>
                <value>
                    <fullName>Copy of Window sticker</fullName>
                </value>
                <value>
                    <fullName>Related sales receipts</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>College_Rebate_Points__c</fullName>
        <label>College Rebate Points</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>College_Rebate__c</fullName>
        <label>College Rebate</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>College_transcript_if_any__c</fullName>
        <defaultValue>false</defaultValue>
        <label>College transcript if any</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Condition__c</fullName>
        <label>Condition</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Date__c</fullName>
        <label>Contract Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Duration__c</fullName>
        <label>Contract Duration (Months)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>24</fullName>
                </value>
                <value>
                    <fullName>36</fullName>
                </value>
                <value>
                    <fullName>39</fullName>
                </value>
                <value>
                    <fullName>42</fullName>
                </value>
                <value>
                    <fullName>45</fullName>
                </value>
                <value>
                    <fullName>48</fullName>
                </value>
                <value>
                    <fullName>60</fullName>
                </value>
                <value>
                    <fullName>72</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Credit_Score_Points__c</fullName>
        <label>Credit Score Points</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_Score__c</fullName>
        <label>Credit Score</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_form_fill_by_the_Customer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Credit form fill by the Customer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DL_Front_and_Back__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DL Front and Back</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Deal_Fees_Points__c</fullName>
        <label>Deal Fees Points</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deal_Fees__c</fullName>
        <label>Deal Fees</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Deal__c</fullName>
        <label>Deal</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deal_miles_Points__c</fullName>
        <label>Deal miles Points</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deal_miles__c</fullName>
        <label>Deal miles</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealership__c</fullName>
        <label>Dealership</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delivery_Address__c</fullName>
        <label>Delivery Address</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>GT Autolab</fullName>
                    <default>true</default>
                    <label>GT Autolab Office</label>
                </value>
                <value>
                    <fullName>Home</fullName>
                </value>
                <value>
                    <fullName>Office</fullName>
                </value>
                <value>
                    <fullName>Dealership</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Desired_Contract_Term_Points__c</fullName>
        <label>Desired Contract Term Points</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Desired_Contract_Term__c</fullName>
        <label>Desired Contract Term</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Discovery_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Discovery Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Expenses__c</fullName>
        <label>Expenses</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Generated_Credit_Application__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Generated Credit Application</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>How_urgent_the_transaction_is_Point__c</fullName>
        <label>How urgent the transaction is Point</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>How_urgent_the_transaction_is_needed__c</fullName>
        <label>How urgent the transaction is needed?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Insurance_Card_if_Any__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Insurance Card if Any</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lead_Score__c</fullName>
        <label>Lead Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Loss_Reason__c</fullName>
        <label>Loss Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Lost to Competitor</fullName>
                </value>
                <value>
                    <fullName>No Budget / Lost Funding</fullName>
                </value>
                <value>
                    <fullName>No Decision / Non-Responsive</fullName>
                </value>
                <value>
                    <fullName>Price</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Maturity_Date_Points__c</fullName>
        <label>Maturity Date Points</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Maturity_Date__c</fullName>
        <formula>Contract_Date__c + (VALUE(TEXT(Contract_Duration__c))*( 365 / 12 )+1)</formula>
        <label>Maturity Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Maturity_Date_custom__c</fullName>
        <label>Maturity Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Military_Rebate_Points__c</fullName>
        <label>Military Rebate Points</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Military_Rebate__c</fullName>
        <label>Military Rebate</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Military_related_Docs__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Military related Docs</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opp_Email__c</fullName>
        <formula>Person_Account_Email__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opp Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ownership__c</fullName>
        <label>Ownership</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ownership_points__c</fullName>
        <label>Ownership points</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment__c</fullName>
        <label>Payment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_terms__c</fullName>
        <label>Payment terms</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Person_Account_Email__c</fullName>
        <label>Person Account Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Personal_Credit_App_Link__c</fullName>
        <description>&quot;http://gtdev-gtauto-creditapplication.cs23.force.com/PersonalApplication_latest?accRecId=(Account.Id)&quot;

&quot;http://gtdev-gtauto-creditapplication.cs23.force.com/PersonalApplication_latest?accRecId=&quot;+ AccountId</description>
        <formula>$Label.Site_Url +&quot;/PersonalApplication_latest?accRecId=&quot;+ AccountId</formula>
        <label>Personal Credit App Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone_Number__c</fullName>
        <label>Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <formula>Account.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Profitable_Amount__c</fullName>
        <formula>Amount  -  Expenses__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Profitable Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Proposal_to_prospect__c</fullName>
        <label>Proposal to prospect</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Negotiation of the price</fullName>
                </value>
                <value>
                    <fullName>Requoting or restructuring</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Quote_approved_Prospect_is_ready_to_buy__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Quote approved. Prospect is ready to buy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ROI_Analysis_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ROI Analysis Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Registration_Points__c</fullName>
        <label>Registration Points</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Registration__c</fullName>
        <label>Registration</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trade_Points__c</fullName>
        <label>Trade Points</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trade_Value__c</fullName>
        <description>Trade-in value</description>
        <label>Trade Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Trade__c</fullName>
        <label>Trade</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vehicle__c</fullName>
        <label>Vehicle</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X_Most_recent_paystubs_if_any__c</fullName>
        <defaultValue>false</defaultValue>
        <label>2 Most recent paystubs if any</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Year_Make_Model_VIN_Points__c</fullName>
        <label>Year, Make, Model, VIN Points</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Year_Make_Model_VIN__c</fullName>
        <label>Year, Make, Model, VIN</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <recordTypes>
        <fullName>Opportunity</fullName>
        <active>true</active>
        <businessProcess>Opportunity</businessProcess>
        <label>Opportunity</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
</CustomObject>